# propagators

./: .gitignore  README.markdown  propagators.cabal  stack.yaml
.github/workflows/: ci.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: package.cache  propagators-0-inplace.conf
src/Data/Propagator/: Cell.hs  Class.hs  Name.hs  Num.hs  Supported.hs
